--- a/public/index.html
+++ b/public/index.html
@@ -151,8 +151,8 @@
                 </h4>
                 <h4><i class="fa fa-star text-warning" aria-hidden="true"></i>&nbsp;A Service web application which connects contractors and Homeowners.</h4>
                 <ul>
-                  <li></li>
-                  <li></li>
+                  <li>Collaborated in a 3-member team to develop a web app to solidify the connection between a homeowner and a contractor and will ease the process of finding the right contractor for the job </li>
+                  <li>Implement features of homeowners posting and offering jobs, and contractors searching, bidding and accepting jobs and updating job process.</li>
                 </ul>
                 <div class="btn-group">
                   <a class="btn" href="https://github.com/susanjiang03/BuildMe">
@@ -182,6 +182,7 @@
                   <p></p>
                   <div class="btn-group">
                   </div>
+                  <a class="btn btn-primary" href="visualCode.html">View Project <i class="fa fa-external-link" aria-hidden="true"></i></a>
                 </div>
             </div>
               <!-- /.row -->
@@ -195,7 +196,7 @@
                 </div>
                 <div class="col-md-5">
                   <h3><img src="./images/logo-mta.jpg" alt="" style="width:45px">True or False</h3>
-                  <h4><i class="fa fa-star text-warning" aria-hidden="true"></i>&nbsp;</h4>
+                  <h4><i class="fa fa-star text-warning" aria-hidden="true"></i>&nbsp;A web game application which tests MTA employee knowledge of operations and show top scores</h4>
                   <p></p>
                   <div class="btn-group">
                     <a class="btn" href="">
@@ -215,7 +216,7 @@
                   </div>
                   <div class="col-md-5">
                       <h3><img src="./images/logo-mta.jpg" alt="" style="width:45px">Multiple Choice Test</h3>
-                      <h4><i class="fa fa-star text-warning" aria-hidden="true"></i>&nbsp;</h4>
+                      <h4><i class="fa fa-star text-warning" aria-hidden="true"></i>&nbsp;A web testing application which tests MTA employee knowledge of operations, tracks and analyzes actions of choices</h4>
                       <p></p>
                       <div class="btn-group">
                         <a class="btn" href="">
@@ -239,7 +240,7 @@
                       <h4><i class="fa fa-star text-warning" aria-hidden="true"></i>
                        Building a DBMS for enterprise internal use and U.S. schools searching engine on company website for external users</h4>
                       <p></p>
-                      <a class="btn btn-primary" href="http://dreamgo.epizy.com/development/colleges.php">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                      <a class="btn btn-primary" href="http://dreamgo.epizy.com/development/colleges.php">View Project <i class="fa fa-external-link" aria-hidden="true"></i></a>
                   </div>
               </div>
               <!-- /.row -->
@@ -256,9 +257,12 @@
                   <div class="col-md-5">
                       <h3>Terrestrial Hydrology Viz</h3>
                       <h4><i>Data Visualization Coursework</i></h4>                                                   
-                      <h4>Subheading</h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
-                      <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                      <!-- <h4>Subheading</h4> -->
+                      <ul>
+                        <li>Applied scikit-learn Machine Learning tool in Python to find the data pattern of climate change indicators</li>
+                        <li>Produced interactive visualization web application of the clusters map with JavaScript D3 library </li>
+                      </ul>
+                      <a class="btn btn-primary" href="https://terrestrial-hydrology-viz.herokuapp.com">View Project <i class="fa fa-external-link" aria-hidden="true"></i></a>(compatible in Safari)
                   </div>
               </div>
             </div>
