--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
            </div>
           </div>
         </div>
-        <div class="col-lg-9">
+        <div class="col-lg-9" style="padding-left:2%">
           <div id="projects">
             <h3 class="text-center">PROJECTS</h3>
             <!-- Project One -->
@@ -161,9 +161,7 @@
                   <a class="btn" href="">
                     <i class="fa fa-youtube text-danger" aria-hidden="true" style="font-size:2vw"></i>
                   </a>
-                  <a class="btn" href="">
-                    Live site (Coming soon ...)
-                  </a>
+                   <a class="btn btn-primary" href="">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
                 </div>
               </div>
             </div>
@@ -181,8 +179,11 @@
                   <h4><i class="fa fa-star text-warning" aria-hidden="true"></i>&nbsp;A personal web project which visualizes the algorithm of programming questions</h4>
                   <p></p>
                   <div class="btn-group">
+                    <!-- <a class="btn" href="https://github.com/susanjiang03/">
+                      <i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
+                    </a> -->
+                    <a class="btn btn-primary" href="visualCode.html">View <i class="fa fa-external-link" aria-hidden="true"></i></a>
                   </div>
-                  <a class="btn btn-primary" href="visualCode.html">View Project <i class="fa fa-external-link" aria-hidden="true"></i></a>
                 </div>
             </div>
               <!-- /.row -->
@@ -240,7 +241,12 @@
                       <h4><i class="fa fa-star text-warning" aria-hidden="true"></i>
                        Building a DBMS for enterprise internal use and U.S. schools searching engine on company website for external users</h4>
                       <p></p>
-                      <a class="btn btn-primary" href="http://dreamgo.epizy.com/development/colleges.php">View Project <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                      <div class="btn-group">
+                        <a class="btn" href="https://github.com/susanjiang03/dreamgo">
+                          <i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
+                        </a>
+                        <a class="btn btn-primary" href="http://dreamgo.epizy.com/development/colleges.php">View <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                      </div>
                   </div>
               </div>
               <!-- /.row -->
@@ -262,15 +268,66 @@
                         <li>Applied scikit-learn Machine Learning tool in Python to find the data pattern of climate change indicators</li>
                         <li>Produced interactive visualization web application of the clusters map with JavaScript D3 library </li>
                       </ul>
-                      <a class="btn btn-primary" href="https://terrestrial-hydrology-viz.herokuapp.com">View Project <i class="fa fa-external-link" aria-hidden="true"></i></a>(compatible in Safari)
+                      <div class="btn-group">
+                        <a class="btn" href="https://github.com/susanjiang03/Terrestrial_Hydrology_Visualization">
+                          <i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
+                        </a>
+                        <a class="btn btn-primary" href="https://terrestrial-hydrology-viz.herokuapp.com">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(compatible in Safari)
+                      </div>
+                  </div>
+              </div>
+              <hr>
+
+                <!-- Project Six -->
+              <div class="row">
+                  <div class="col-md-7">
+                      <a href="">
+                          <img class="img-responsive" src="./images/web-pipeline.jpg" alt="">
+                      </a>
+                  </div>
+                  <div class="col-md-5">
+                      <h3>Pipeline Monitor</h3>
+                      <h4><i>Website Application Design Coursework</i></h4>                                                   
+                      <!-- <h4>Subheading</h4> -->
+                      <ul>
+                        <li>Collaborated in a 4-member team to create a news aggregator to scrap main content from RSS feeds</li>
+                        <li>Implemented a pipeline monitor to monitor the process of generating data and a dashboard to visualize the result</li>
+                      </ul>
+                      <div class="btn-group">
+                        <a class="btn" href="https://github.com/susanjiang03/pipeline_monitor"><i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
+                        </a>
+                        <a class="btn btn-primary" href="">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
+                      </div>
+                  </div>
+              </div>
+              <hr>
+
+                <!-- Project 7 -->
+              <div class="row">
+                  <div class="col-md-7">
+                      <a href="#">
+                          <img  alt="">
+                      </a>
+                  </div>
+                  <div class="col-md-5">
+                      <h3>E-book Sharing System</h3>
+                      <h4><i>Software Engineering Coursework  </i></h4>                                                   
+                      <!-- <h4>Subheading</h4> -->
+                      <ul>
+                        <li>Led a 3-member team to developed a Java application which allowed registered users to share text files and super users to administrate e-book library and users</li>
+                        <li>Implemented a pipeline monitor to monitor the process of generating data and a dashboard to visualize the result</li>
+                      </ul>
+                      <div class="btn-group">
+                        <a class="btn" href="https://github.com/susanjiang03/pipeline_monitor"><i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
+                        </a>
+                        <a class="btn btn-primary" href="">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
+                      </div>
                   </div>
               </div>
             </div>
             <!-- /.row -->
-
             <hr>
 
-          
             </div>
       </div>   <!-- /.row -->
     </div>
